# forge

./: .dockerignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  install.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
docs/: building.md  configuration.md  patching-and-validation.md  testing.md
examples/: README.md
examples/cross-compile/: README.md  forge.toml
examples/cross-compile/src/: main.c  platform.h
examples/cross-compile/src/platform/: linux.c
examples/patching/: README.md  forge.toml
examples/patching/scripts/: deploy.sh
examples/patching/src/: config.h  main.c
examples/simple/: README.md  forge.toml
examples/simple/src/: main.c
src/: error.rs  lib.rs  main.rs  selfupdate.rs
src/cert/: mod.rs  openssl.rs
src/clean/: mod.rs  secure.rs
src/cli/: build_cmd.rs  cert_cmd.rs  clean_cmd.rs  config_cmd.rs  init_cmd.rs  mod.rs  new_cmd.rs  package_cmd.rs  patch_cmd.rs  scripts_cmd.rs  targets_cmd.rs  test_cmd.rs  uninstall_cmd.rs  update_cmd.rs  validate_cmd.rs
src/manifest/: mod.rs  types.rs  validation.rs
src/package/: deb.rs  dmg.rs  mod.rs  raw.rs
src/patch/: mod.rs  scanner.rs  types.rs  writer.rs
src/scaffold/: mod.rs  templates.rs
src/scripts/: env.rs  mod.rs
src/test_runner/: c_test.rs  mod.rs  shellcheck.rs
src/util/: fs.rs  mod.rs  output.rs  process.rs
src/validate/: checks.rs  mod.rs  report.rs
tests/: cli.rs
