[package]
name = "forge"
version = "1.0.0"
edition = "2024"
description = "Build system for C/C++ cross-compilation"
license = "MIT"
repository = "https://github.com/jspwrd/forge"
readme = "README.md"
keywords = ["build", "cross-compilation", "c", "cpp", "toolchain"]
categories = ["development-tools::build-utils"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
anyhow = "1"
walkdir = "2"
glob = "0.3"
colored = "3"
which = "7"
rand = "0.9"
tempfile = "3"
sha2 = "0.10"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
